force-app/main/default/objects/Agent_Capacity__c/Agent_Capacity__c.object-meta.xml
<CustomObject>
    <label>Agent Capacity</label>
    <nameField>
        <label>Agent Capacity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agents Capacity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>