force-app/main/default/objects/Agent_Capacity__c/fields/Agent_Language__c.field-meta.xml
<CustomField>
    <fullName>Agent_Language__c</fullName>
    <label>Agent Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telugu</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>