force-app/main/default/objects/Agent_Capacity__c/fields/Max_lead_Capacity_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Max_lead_Capacity_Per_Day__c</fullName>
    <label>Max lead Capacity Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>