force-app/main/default/objects/Agent_Capacity__c/fields/P2_Priority_Percentage__c.field-meta.xml
<CustomField>
    <fullName>P2_Priority_Percentage__c</fullName>
    <label>P2 Priority Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>